--- a/PrintPdf/Views/Home/OvertimeRequest.cshtml
+++ b/PrintPdf/Views/Home/OvertimeRequest.cshtml
@@ -41,13 +41,19 @@
                     <b>สถานที่ทำงาน</b>
                 </div>
                 <div class="col-2">
-
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" checked/>
+                        <label class="form-check-label">สำนักงาน</label>
+                    </div>
                 </div>
                 <div class="col-2">
-
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" />
+                        <label class="form-check-label">Site(ชื่อลูกค้า)</label>
+                    </div>
                 </div>
                 <div class="col-6">
-
+                    <input type="text" class="form-control form-control-sm" />
                 </div>
             </div>
             <div class="form-group row">
@@ -55,16 +61,22 @@
                     <b>จำนวน</b>
                 </div>
                 <div class="col-3">
-
+                    <input type="text" class="form-control form-control-sm" />
                 </div>
                 <div class="col-1">
                     <p>วัน</p>
                 </div>
                 <div class="col-3">
-
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" />
+                        <label class="form-check-label">เบิกค่าทำงานล่วงเวลา</label>
+                    </div>
                 </div>
                 <div class="col-3">
-
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" />
+                        <label class="form-check-label">ไม่เบิกค่าทำงานล่วงเวลา</label>
+                    </div>
                 </div>
             </div>
             <div class="form-group row">
@@ -108,13 +120,13 @@
             </div>
             <div class="form-group row">
                 <div class="col-4">
-
+                    <input type="text" class="form-control form-control-sm" />
                 </div>
                 <div class="col-4">
-
+                    <input type="text" class="form-control form-control-sm" />
                 </div>
                 <div class="col-4">
-
+                    <input type="text" class="form-control form-control-sm" />
                 </div>
             </div>
             <div class="form-group row">
@@ -130,17 +142,37 @@
             </div>
             <div class="form-group row">
                 <div class="col-4 text-center">
-
+                    <b>วันที่ ..............................</b>
                 </div>
                 <div class="col-4 text-center">
-
+                    <b>วันที่ ..............................</b>
                 </div>
                 <div class="col-4 text-center">
-
+                    <b>วันที่ ..............................</b>
+                </div>
+            </div>
+            <br />
+            <div class="form-group row">
+                <div class="col-1">
+                    <b style="vertical-align:bottom">หมายเหตุ: </b>
+                </div>
+                <div class="col-11">
+                    <p style="vertical-align:bottom">1. ถ้าทำงานนอกเวลาทำงานปกติในสำนักงานหรือต้องการเข้าสำนักงานนอกเวลางาน ให้ส่งเอกสารชุดนี้ก่อนเวลา 16.00 น. ของวันทำงานนั้นๆ หรือส่งล่วงหน้า 1 วันก่อนการทำงานในวันหยุด เพื่อที่จะ Set Program Access Control</p>
                 </div>
             </div>
             <div class="form-group row">
-
+                <div class="col-1">
+                </div>
+                <div class="col-11">
+                    <p style="vertical-align:bottom">2. การเบิกค่าล่วงเวลา ต้องส่งเอกสารให้ Admin ภายในวันที่ 16 ของทุกเดือน โดยจะได้รับเงินค่าล่วงเวลาพร้อมเงินเดือนในเดือนนั้น หากส่งหลังวันที่ 16 ของเดือน จะได้รับเงินค่าล่วงเวลาพร้อมเงินเดือนในเดือนถัดไป</p>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-1">
+                </div>
+                <div class="col-11">
+                    <p style="vertical-align:bottom">3. พนักงานต้องนำเอกสารชุดนี้แนบกับใบเบิกค่าล่วงเวลาตามที่ได้อนุมัติ พร้อมรายงานการปฏิบัติงาน/หรือใบลงเวลาการทำงาน</p>
+                </div>
             </div>
         </form>
     </div>
