--- a/PrintPdf/Views/OvertimeRequest/RequestForm.cshtml
+++ b/PrintPdf/Views/OvertimeRequest/RequestForm.cshtml
@@ -1,17 +1,12 @@
-﻿@{
+﻿@model FormOvertimeRequestModel
+@{
     Layout = null;
 }
 <!DOCTYPE html>
 <html>
 <head>
-    <title>(Demo) Form Overtime Request</title>
+    <title>Form Request Overtime</title>
     <partial name="_Style" />
-    <style>
-        b{
-            font-family:'Agency FB';
-            font-size:16px;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -24,13 +19,13 @@
                     <b>ชื่อพนักงาน</b>
                 </div>
                 <div class="col-5">
-                    <p>Korakod Phongdee</p>
+                    <p>@Model.employee_name</p>
                 </div>
                 <div class="col-2 text-right">
                     <b>Job</b>
                 </div>
                 <div class="col-3">
-                    <p>J20-1299</p>
+                    <p>@Model.job_id</p>
                 </div>
             </div>
             <div class="form-group row">
@@ -39,7 +34,7 @@
                 </div>
                 <div class="col-2">
                     <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" checked/>
+                        <input type="checkbox" class="form-check-input" checked />
                         <label class="form-check-label">สำนักงาน</label>
                     </div>
                 </div>
@@ -176,4 +171,3 @@
     <partial name="_Scripts" />
 </body>
 </html>
-
