--- a/PrintPdf/Views/Shared/_Header.cshtml
+++ b/PrintPdf/Views/Shared/_Header.cshtml
@@ -3,7 +3,7 @@
         <a asp-controller="Home" asp-action="Index" class="navbar-brand">
             <img src="https://adminlte.io/docs/3.0/assets/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                  style="opacity: .8">
-            <span class="brand-text font-weight-light">IT Assets</span>
+            <span class="brand-text font-weight-light">Home</span>
         </a>
         <ul class="navbar-nav">
             <li class="nav-item">
