--- a/PrintPdf/Views/Shared/_Header.cshtml
+++ b/PrintPdf/Views/Shared/_Header.cshtml
@@ -15,6 +15,12 @@
             <li class="nav-item">
                 <a class="nav-link" asp-controller="DailyReport" asp-action="Index">Daily Report</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Demo" asp-action="DemoViewAsPDF">Demo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Demo" asp-action="DemoModelPDF">Demo Model</a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
